hw4-prometheus/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-hw4-prometheus-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw4-prometheus-app
    template:
       metadata:
          labels:
             app: otus-hw4-prometheus-app
       spec:
          containers:
          - name: otus-hw4-prometheus
            image: evgen2sat/otus-hw4-prometheus:1.0.1
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
