hw4-prometheus/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw4-prometheus-service
spec:
  selector:
    app: otus-hw4-prometheus-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web 
  type: NodePort
